k8s/celeryworker-long.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celeryworkerlong
  namespace: gic3
spec:
  selector:
    matchLabels:
      app: celeryworkerlong
  template:
    metadata:
      labels:
        app: celeryworkerlong
    spec:
      containers:
      - name: celeryworker
        image: registry.deti:5000/celeryworkerlonggic3
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /home/mediacms.io/mediacms/media_files
          name: mediafiles
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: web  
      volumes:
        - name: mediafiles
          persistentVolumeClaim:
              claimName: mediafilespvc
