k8s/celeryworker-short.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celeryworkershort
  namespace: gic3
spec:
  selector:
    matchLabels:
      app: celeryworkershort
  template:
    metadata:
      labels:
        app: celeryworkershort
    spec:
      containers:
      - name: celeryworkerlong
        image: registry.deti:5000/celeryworkershortgic3
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /home/mediacms.io/mediacms/media_files
          name: mediafiles
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - web
                - api 
      volumes:
        - name: mediafiles
          persistentVolumeClaim:
              claimName: mediafilespvc
