k8s/celeryworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celeryworker
  namespace: gic3
spec:
  selector:
    matchLabels:
      app: celeryworker
  template:
    metadata:
      labels:
        app: celeryworker
    spec:
      containers:
      - name: celeryworker
        image: registry.deti:5000/celeryworkergic3
        imagePullPolicy: Always   
        volumeMounts:
        - mountPath: /home/mediacms.io/mediacms/media_files
          name: mediafiles
          subPath: media_files
      volumes:
        - name: mediafiles
          persistentVolumeClaim:
              claimName: mediafilespvc
