k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: gic3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.deti:5000/webgic3
        imagePullPolicy: Always
        ports:
          - name: uwsgi
            containerPort: 9000
        volumeMounts:
          - mountPath: /home/mediacms.io/mediacms/static
            name: staticfiles
          - mountPath: /home/mediacms.io/mediacms/media_files
            name: mediafiles
  
      volumes:
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfilespvc
        - name: mediafiles
          persistentVolumeClaim:
              claimName: mediafilespvc 

# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: gic3
spec:
  ports:
  - name: uwsgi
    port: 9000
    targetPort: 9000
  selector:
    app: api
