k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: gic3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: registry.deti:5000/nginxgic3
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: staticfiles
              mountPath: /home/mediacms.io/mediacms/static
            - name: mediafiles
              mountPath: /home/mediacms.io/mediacms/media_files
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true

      restartPolicy: Always
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfilespvc
        - name: mediafiles
          persistentVolumeClaim:
              claimName: mediafilespvc 


# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: gic3
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
