k8s/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: gic3
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: registry.deti:5000/postgresgic3:latest
        imagePullPolicy: Always 
        volumeMounts:
          - mountPath: /data
            name: pg-data
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: psql
          containerPort: 5432

      - name: postgres-exporter
        image: quay.io/prometheuscommunity/postgres-exporter
        imagePullPolicy: Always
        ports:
        - name: exporter
          containerPort: 9187
        args:
          - "--extend.query-path=/queries/queries.yaml"
        volumeMounts:
        - name: query
          mountPath: "/queries/queries.yaml"
          subPath: "queries.yaml"
      volumes:
        - name: query
          configMap:
            name: query
        - name: pg-data
          persistentVolumeClaim:
            claimName: pg-data-pvc

    


---


apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: gic3
  labels:
    app: postgres
spec:
  ports:
      - name: psql
        port: 5432
        targetPort: 5432
      - name: exporter
        port: 9187
        targetPort: 9187
  selector:
      app: postgres
