k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: gic3
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/
        - name: prometheus-storage
          mountPath: /prometheus/
      volumes:
      - name: prometheus-config
        configMap:
          defaultMode: 420
          name: prometheus-config
      - name: prometheus-storage
        emptyDir: {}


# Create Service for Prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: gic3
  # annotations:
  #   prometheus.io/scrape: 'true'
  #   prometheus.io/port:   '9090'
spec:
  type: ClusterIP # NodePort
  selector:
    app: prometheus
  ports:
  - name: prometheus-port
    protocol: TCP
    port: 9090
    targetPort: 9090
