k8s/redis.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gic3
  labels:
    app: redis
spec:
  selector:
      matchLabels:
        app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: registry.deti:5000/redisgic3
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /redis-data
            name: redis-data
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 6379
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc



---

apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: gic3
  labels:
    app: redis-svc
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
