k8s/web.yaml
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: local-settings
#   namespace: gic3
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: longhorn
#   resources:
#     requests:
#       storage: 10Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: gic3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: registry.deti:5000/webgic3
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 80
          - name: uwsgi
            containerPort: 9000
        volumeMounts:
          - mountPath: /home/mediacms.io/mediacms/static
            name: staticfiles
      volumes:
        - name: staticfiles
          persistentVolumeClaim:
            claimName: staticfilespvc

# Create Service for APP
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: gic3
spec:
  ports:
  - name: uwsgi
    port: 9000
    targetPort: 9000
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: web
